Lots of UI. Map buttons updated. Fixed all known light/dark mode bugs

--- a/src/styles/components/resortCard.css
+++ b/src/styles/components/resortCard.css
@@ -70,7 +70,7 @@
     width: 15vw;
 
     background-color: black;
-    color:black;
+    color:#ededeb;
 
     transition: transform 0.3s ease; 
 }
