--- a/src/styles/routes/feedback.css
+++ b/src/styles/routes/feedback.css
@@ -37,7 +37,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 33%;
+    height: 20%;
     background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
     pointer-events: none; 
 }
@@ -54,7 +54,6 @@
     font-size: 4vw;
     font-family: "Anonymous Pro", monospace;
     color: black;
-    text-shadow: 0 0 15px black;
 
     height: 4vw;
 
@@ -183,7 +182,7 @@
     border-radius: 5px;
     padding: 10px;
     margin: 1vw;
-    width: 80%;
+    width: 70%;
     max-width: 80vw;
     height: fit-content;
 
