--- a/src/styles/routes/home.css
+++ b/src/styles/routes/home.css
@@ -51,8 +51,6 @@
     font-size: 4vw;
     font-family: "Anonymous Pro", monospace;
     color: black;
-    text-shadow: 0 0 15px black;
-
     height: 4vw;
 }
 
