--- a/src/styles/routes/resort.css
+++ b/src/styles/routes/resort.css
@@ -68,7 +68,6 @@
     font-size: 5vw;
     font-family: "Anonymous Pro", monospace;
     color: black;
-    text-shadow: 0 0 15px black;
 
     height: 4vw;
     margin-bottom: 2vw;
